Реализация ФЗ ветка Add item requests and gateway